# Amulet-pybind11-extensions

./: .gitignore  CMakeLists.txt  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: python-build.yml  python-unittests.yml
src/amulet/pybind11/: _version.py  builtins.hpp  collections.hpp  compatibility.hpp  contextlib.hpp  numpy.hpp  py_module.hpp  pybind11.hpp  types.hpp
src/amulet/pybind11_extensions/: _version.py  collections.hpp  compatibility.hpp  contextlib.hpp  hash.hpp  iterable.hpp  iterator.hpp  mapping.hpp  mutable_mapping.hpp  mutable_sequence.hpp  py_module.hpp  pybind11.hpp  sequence.hpp  types.hpp
src/pybind11_extensions/: __init__.py  _version.py
src/pybind11_extensions/include/: types.hpp
src/pybind11_extensions/include/pybind11_extensions/: builtins.hpp  collections.hpp  contextlib.hpp  py_module.hpp  pybind11.hpp  types.hpp
tests/: CMakeLists.txt  _test_builtins.py.cpp  _test_collections.py.cpp  _test_compatibility_1.py.cpp  _test_compatibility_2.py.cpp  _test_contextlib.py.cpp  _test_hash.py.cpp  _test_iterator.py.cpp  _test_mapping.py.cpp  _test_mutable_mapping.py.cpp  _test_nogil_holder.py.cpp  _test_numpy.py.cpp  _test_py_module_.py.cpp  _test_pybind11.py.cpp  _test_sequence.py.cpp  _test_types.py.cpp  compile.py  test_builtins.py  test_collections.cpp  test_collections.py  test_compatibility.py  test_contextlib.py  test_hash.py  test_iterator.py  test_mapping.py  test_mutable_mapping.py  test_nogil_holder.py  test_numpy.py  test_py_module.py  test_pybind11.py  test_sequence.py  test_types.py
tests/_test_py_module/: __init__.py
tests/test_amulet_pybind11_extensions/: __init__.py  __init__.pyi  _test_amulet_pybind11_extensions.py.cpp  test_builtins.py  test_builtins_.py.cpp  test_builtins_.pyi  test_collections.py  test_collections_.py.cpp  test_collections_.pyi  test_compatibility.py  test_compatibility_1_.py.cpp  test_compatibility_2_.py.cpp  test_compatibility_2_.pyi  test_contextlib.py  test_contextlib_.py.cpp  test_contextlib_.pyi  test_hash.py  test_hash_.py.cpp  test_hash_.pyi  test_iterator.py  test_iterator_.py.cpp  test_iterator_.pyi  test_mapping.py  test_mapping_.py.cpp  test_mapping_.pyi  test_mutable_mapping.py  test_mutable_mapping_.py.cpp  test_mutable_mapping_.pyi  test_mutable_sequence.py  test_mutable_sequence_.py.cpp  test_mutable_sequence_.pyi  test_nogil_holder.py  test_nogil_holder_.py.cpp  test_nogil_holder_.pyi  test_numpy.py  test_numpy_.py.cpp  test_numpy_.pyi  test_py_module.py  test_py_module__.py.cpp  test_pybind11.py  (+8 more)
tests/test_amulet_pybind11_extensions/test_py_module_/: __init__.py  __init__.pyi
tools/: cmake_generate.py  compile_tests.py  generate_pybind_stubs.py
