[metadata]
name = amulet-pybind11-extensions
url = https://www.amuletmc.com
author = James Clare
author_email = amuleteditor@gmail.com
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description = An extension library for pybind11.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any


[options]
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.10

[options.packages.find]
where=src

[options.package_data]
* =
    **/*.hpp
